# txt2audio

./: .gitignore  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
resources/: novel_dict.txt
src/: bark_util.py  fairseq_transformer.py  transform_to_audio.py  txt2audio.py  util.py  utility.py  video.py  xtts_v2.py
